Source/WebCore/PAL/pal/spi/mac/NSApplicationSPI.h
@@ -32,6 +32,7 @@
 
 #if __MAC_OS_X_VERSION_MIN_REQUIRED >= 101400
 + (void)_accessibilityInitialize;
++ (void)_preventDockConnections;
 #endif
 
 @end
